# cpp_chess

./: .gitignore  CMakeLists.txt  README.md  chess.cpp
pieces/: bishop_pair.cpp  bishop_pair.h  king.cpp  king.h  knight_pair.cpp  knight_pair.h  pawn.cpp  pawn.h  piece_pair.h  queen.cpp  queen.h  rook_pair.cpp  rook_pair.h
utils/: board.cpp  board.h  board_utils.cpp  board_utils.h  client_layer.cpp  client_layer.h  move_parser.cpp  move_parser.h
